fix: update z-index

--- a/src/components/style.scss
+++ b/src/components/style.scss
@@ -1,5 +1,4 @@
 $react-drawer-options: (
-  duration: 300ms,
   z-index: (
     modal: 100,
     backdrop: 98
@@ -7,13 +6,15 @@ $react-drawer-options: (
 ) !default;
 
 .react-drawer {
-  $duration: map-get( $map: $react-drawer-options, $key: duration );
   $z-index: map-get( $map: $react-drawer-options, $key: z-index );
   $drawer-z-index: map-get( $map: $z-index, $key: drawer );
   $backdrop-z-index: map-get( $map: $z-index, $key: backdrop );
 
+  z-index: $drawer-z-index;
+
   &,
   & + .webkit-sassui-backdrop{
     position: fixed;
+    z-index: $drawer-z-index
   }
 }
